added first section

--- a/style.css/index.css
+++ b/style.css/index.css
@@ -3,6 +3,13 @@
 .quick-sand-font {
   font-family: "Quicksand", serif;
   font-optical-sizing: auto;
+
+ 
+}
+body{
+    max-width: 1440px;
+    width: 1024px;
+    margin: 0 auto;
 }
 
 
@@ -16,7 +23,7 @@
     font-family: Quicksand;
     font-size: 2rem;
     font-weight: 700;
-   margin: 20px auto;
+    /* margin: 20px auto; */
 }
 img{
     width: 62px;
@@ -27,7 +34,7 @@ img{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    background: rgb(247, 247, 247);
+    /* background: rgb(247, 247, 247); */
 }
 .nav-links{
     display: flex;  
@@ -71,25 +78,28 @@ img{
     border: none;
     border-radius: 12px;
 }
-/* nav bar ends */
+                /*     nav bar ends     */
+
+                /*     banner start     */
+.banner{
+   
+}                
 .banner{
     display: flex;
     align-items: center;
     gap: 50px;
-    background: rgb(247, 247, 247);
-    border: 2 px solid yellow;
+    /* background: rgb(247, 247, 247); */
+    
 
 }
-.banner-detail{
-   margin-left: 50px;
-}
+
 .banner-title{
     font-family: Quicksand;
     font-size: 2.5rem;
     font-weight: 600;
     
 }
-#Empowering{
+#empowering{
 color: rgb(254, 163, 1);
 }
 #towards-vision{
@@ -117,4 +127,82 @@ color: rgb(1, 172, 253);
     height: 575px;
 }
 
+                    /*     banner end     */
 
+              /*     section one start     */
+
+.section-one{
+    
+}
+.section-one-heading{
+    
+    color: rgb(0, 0, 0);
+    font-family: Quicksand;
+    font-size: 2.5rem;
+    font-weight: 700;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.section-one-div{
+    display: flex;
+    justify-content:space-evenly ;
+    gap: 20px;
+}
+.box-one{
+    text-align: center;
+    box-sizing: border-box;
+    border: 0.94px solid rgb(222, 245, 255);
+    border-radius: 18.86px;
+    box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+    background: linear-gradient(180.00deg, rgb(222, 245, 255),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
+}
+.box-two{
+    text-align: center;
+    box-sizing: border-box;
+    border: 0.94px solid rgb(255, 244, 220);
+    border-radius: 18.86px;
+    box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+    background: linear-gradient(180.00deg, rgb(255, 244, 220),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
+}
+.box-three{
+    text-align: center;
+    box-sizing: border-box;
+    border: 0.94px solid rgb(242, 232, 255);
+    border-radius: 18.86px;
+    box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+    background: linear-gradient(180.00deg, rgb(238, 225, 255),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
+    }
+.box-title{
+    color: rgb(32, 32, 32);
+    font-family: Quicksand;
+    font-size: 1.5rem;
+    font-weight: 700;
+    }
+.box-detail{
+    color: rgb(128, 128, 128);
+    font-family: Raleway;
+    font-size: 1rem;
+    font-weight: 500;
+    }
+#one-button{
+    color: rgb(100, 200, 255);
+    font-family: Quicksand;
+    font-size: 1rem;
+    font-weight: 700;
+    border: none;
+}
+#two-button{
+    color: rgb(240, 170, 0);
+    font-family: Quicksand;
+    font-size: 1rem;
+    font-weight: 700;
+    border: none;
+}
+#three-button{
+    color: rgb(135, 0, 255);
+    font-family: Quicksand;
+    font-size: 1rem;
+    font-weight: 700;
+    border: none;
+}
