--- a/style.css/index.css
+++ b/style.css/index.css
@@ -6,14 +6,14 @@
  
  
 }
-body{
-    max-width: 1440px;
-    width: 1024px;
-    margin: 0 auto;
-}
+
 
 
 /* nav bar start */
+.navbar-container{
+    max-width: 1440px;
+
+}
 .nav-logo{
     display: flex;
 }   
@@ -32,10 +32,12 @@ img{
     
 }
 .nav-bar{
+    width: 1024px;
+    margin: 0 auto;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    /* background: rgb(247, 247, 247); */
+
 }
 .nav-links{
     display: flex;  
@@ -79,17 +81,53 @@ img{
     border: none;
     border-radius: 12px;
 }
+#media{
+    display: none;
+}
                 /*     nav bar ends     */
 
+#notice{
+
+    font-family: Quicksand;
+    font-size: 1.5rem;
+    font-weight: 800;
+    color: rgb(249, 177, 89);
+    background-color: #ffffff;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+
+
                 /*     banner start     */
-               
+ .banner-container{
+    max-width: 1440px;
+
+ }              
 .banner{
+    width: 1024px;
+    margin: 0 auto;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     gap: 50px;
-    /* background: rgb(247, 247, 247); */
+
     
 
+}
+.banner-detail{
+    display: flex;
+    flex-direction:column;
+    justify-content:flex-start;
+    text-align: left;
+    align-items: flex-start;
+    
 }
 
 .banner-title{
@@ -117,9 +155,11 @@ color: rgb(1, 172, 253);
     font-size: 1.5rem;
     font-weight: 700;
     padding: 10px 50px;
+    margin-right: 100px;
     border: none;
     border-radius: 12px;
     background-color: rgb(17, 17, 17);
+    
 }
 .banner-logo{
     width: 468.61px;
@@ -131,7 +171,9 @@ color: rgb(1, 172, 253);
               /*     section one start     */
 
 
-
+.section-one{
+    background-image: url('bg.png');
+}
 .section-one-heading{
     
     color: rgb(0, 0, 0);
@@ -142,13 +184,25 @@ color: rgb(1, 172, 253);
     justify-content: center;
     align-items: center;
 }
+.section-one-container{
+    max-width: 1440px;
+    width: 1024px;
+    margin: 0 auto;
+}
 .section-one-div{
     display: flex;
     justify-content:space-evenly ;
     gap: 20px;
 }
 .box-one{
+    width: 328px;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
     text-align: center;
+    align-items: center;
+    justify-content: center;
+    padding:10px 60px;
     box-sizing: border-box;
     border: 0.94px solid rgb(222, 245, 255);
     border-radius: 18.86px;
@@ -156,7 +210,14 @@ color: rgb(1, 172, 253);
     background: linear-gradient(180.00deg, rgb(222, 245, 255),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
 }
 .box-two{
+    width: 328px;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
     text-align: center;
+    align-items: center;
+    justify-content: center;
+    padding:10px 60px;
     box-sizing: border-box;
     border: 0.94px solid rgb(255, 244, 220);
     border-radius: 18.86px;
@@ -164,7 +225,14 @@ color: rgb(1, 172, 253);
     background: linear-gradient(180.00deg, rgb(255, 244, 220),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
 }
 .box-three{
+    width: 328px;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
     text-align: center;
+    align-items: center;
+    justify-content: center;
+    padding:10px 60px;
     box-sizing: border-box;
     border: 0.94px solid rgb(242, 232, 255);
     border-radius: 18.86px;
@@ -174,7 +242,7 @@ color: rgb(1, 172, 253);
 .box-title{
     color: rgb(32, 32, 32);
     font-family: Quicksand;
-    font-size: 1.5rem;
+    font-size: 1rem;
     font-weight: 700;
     }
 .box-detail{
@@ -189,6 +257,8 @@ color: rgb(1, 172, 253);
     font-size: 1rem;
     font-weight: 700;
     border: none;
+    margin-top: 20px;
+    background: none;
 }
 #two-button{
     color: rgb(240, 170, 0);
@@ -196,6 +266,8 @@ color: rgb(1, 172, 253);
     font-size: 1rem;
     font-weight: 700;
     border: none;
+    margin-top: 20px;
+    background: none;
 }
 #three-button{
     color: rgb(135, 0, 255);
@@ -203,6 +275,9 @@ color: rgb(1, 172, 253);
     font-size: 1rem;
     font-weight: 700;
     border: none;
+    margin-top: 20px;
+    background: none;
+    
 }
 .side-arrow-button{
     display: flex;
@@ -237,6 +312,12 @@ color: rgb(1, 172, 253);
                                         /* section one end */
 
                                         /* section two start */
+.section-two {
+    background: url(bg.png);
+    background:  linear-gradient(0.00deg, rgba(254, 163, 1, 0.3),rgba(255, 255, 255, 0.3) 100%);
+  
+    
+}                                      
 .section-two-heading{
     display: flex;
     justify-content: center;
@@ -254,8 +335,12 @@ color: rgb(1, 172, 253);
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 300px);
-    gap: 20px;
+    gap: 10px;
   
+}
+.bg{
+    background-color: white;
+    border-radius: 0 0 16px 16px
 }
 
 #story-one{
@@ -265,11 +350,11 @@ color: rgb(1, 172, 253);
     
 }
 #image-one{
-    width: 540px;
+    width: 500px;
     height: 337px;
-    border-radius: 16px 16px 0px 0px;
-    background: url(),rgb(217, 217, 217);
+    border-radius: 16px 16px 0 0;
 }
+
 .story-one-date{ 
     display: flex;
     justify-content: center;
@@ -279,10 +364,10 @@ color: rgb(1, 172, 253);
     font-size: 1rem;
     font-weight: 500;
     width: 174.51px;
-    height: 47.93px;
+    height: 30px;
     border-radius: 47.93px;
     background: rgb(60, 216, 232);
-    padding: 12px;
+    padding: 8px;
     margin-left: 38px;
     margin-top: -20px;
 
@@ -310,14 +395,29 @@ color: rgb(1, 172, 253);
     font-weight: 500;
     line-height: 28.76px;
     margin-left: 38px;
-    margin-top: 10px;
+    /* margin-top: 10px; */
+    padding: 0;
 }
 
 .story-image{
-    width: 291px;
-    height: 177px;
+    width: 253px;
+    height: 150px;
     border-radius: 16px 16px 0px 0px;
     background: url(),rgb(255, 255, 255);
+}
+.story-title{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 180px;
+    height: 70px;
+    color: rgb(0, 0, 0);
+    font-family: Quicksand;
+    font-size: .8rem;
+    font-weight: 700;
+    margin-left: 30px;
+    
+
 }
 #second-image-date{
     display: flex;
@@ -333,6 +433,9 @@ color: rgb(1, 172, 253);
     background: rgb(149, 178, 38);
     padding: 10px;
     margin-left: 30px;
+    margin-top: -25px; 
+   
+    
 
 }
 
@@ -347,10 +450,11 @@ color: rgb(1, 172, 253);
     width: 136.46px;
     height: 18.22px;
     border-radius: 47.93px;
-    background: rgb(149, 178, 38);
+    background: rgb(93, 88, 240);
     padding: 10px;
     margin-left: 30px;
-    margin-top: -25px;    
+    margin-top: -25px;  
+  
 }
 #forth-image-date{
     display: flex;
@@ -384,24 +488,7 @@ color: rgb(1, 172, 253);
     margin-left: 30px;
     margin-top: -25px;   
 }
-.story-title{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    width: 198.04px;
-    height: 47.93px;
-    color: rgb(0, 0, 0);
-    font-family: Quicksand;
-    font-size: 1rem;
-    font-weight: 700;
-    margin-left: 30px;
 
-}
-
-
-                                        /* section two end       */
-
-                                        
 #view-button{
     display: flex;
     flex-direction: row;
@@ -417,23 +504,35 @@ color: rgb(1, 172, 253);
     background: rgb(17, 17, 17);
     margin: 0 auto;
     margin-top: 80px;
-    }
-.footer-conteinar{
+    
+}
+
+
+
+                                                          /*           section two end       */
+
+                                        
+
+footer{
+    background: rgb(1, 172, 253);
+}
+.footer-container{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    
     max-width: 1440px;
     width: 1024px;
-    height: 519px;
+    /* height: 519px; */
     margin: 0 auto;
-    margin-top: 50px;
-    background: rgb(1, 172, 253);
+    
+   
 
 }
 #footer-logo{
     width: 70.34px;
     height: 81.65px;
-    background: rgb(217, 217, 217);
+
 }
 #footer-title{
     width: 206.11px;
@@ -480,15 +579,146 @@ color: rgb(1, 172, 253);
     margin-top: 10px;
 }
 #touch{
-    width: 156.36px;
-    height: 30px;
     color: rgb(255, 255, 255);
     font-family: Quicksand;
     font-size: 1.5rem;
     font-weight: 700;
 }
-.class{
+.touch-container{
+    margin-bottom: 120px;
+}
+.touch-icon{
     width: 40px;
     height: 40px;
     border: 4px;
+    margin-top: -5ex;
+}
+
+
+@media only screen and (max-width:576px) {
+
+
+body{
+    flex-direction: column;
+}
+.nav-logo{
+    /* width: 300px; */
+    width: auto;
+}
+
+.nav-title{
+    display: none;
+}
+.nav-button{
+    display: none;
+}
+#media{
+    display:contents ;
+}
+.nav-links{
+    display: none;
+}
+#notice{
+    display:none;
+}
+.banner{
+
+    flex-direction: column-reverse;
+    width: 300px;
+   
+}
+.banner-detail{
+    width: 300px;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    
+    margin-left: 0;
+}
+.banner-logo{
+    width: 300px;
+    /* height: 360px; */
+    width: auto;
+    margin: 0 auto;
+}
+.banner-description{
+    width: 300px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.banner-button{
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
+.section-one-div{
+    flex-direction: column;
+    /* width: 300px; */
+    width: auto;
+}
+.box-one{
+    width: 250px;
+    padding: 0;
+}
+.box-two{
+    width: 300px;
+}
+.box-three{
+    width: 300px;
+}
+
+.side-arrow-button{
+    display: none;
+}
+
+#story-one{
+    display: none;
+}
+.section-two{
+    width: 250px;
+    background:  linear-gradient(0.00deg, rgba(254, 163, 1, 0.3),rgba(255, 255, 255, 0.3) 100%);
+   
+}
+.section-two-story{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    width: 250px;
+    /* width: auto; */
+}
+.footer-container{
+    flex-direction: column;
+    width: 300px;
+    height: auto;
+    gap: 5px;
+    align-content: flex-start;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    margin-left: 10px;
+}
+.bg{
+   width: 254px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 }
