--- a/style.css/index.css
+++ b/style.css/index.css
@@ -315,6 +315,7 @@ color: rgb(1, 172, 253);
 .section-two {
     background: url(bg.png);
     background:  linear-gradient(0.00deg, rgba(254, 163, 1, 0.3),rgba(255, 255, 255, 0.3) 100%);
+    padding-bottom: 60px;
   
     
 }                                      
@@ -488,7 +489,9 @@ color: rgb(1, 172, 253);
     margin-left: 30px;
     margin-top: -25px;   
 }
-
+#button-div{
+/* margin-bottom: 60px; */
+}
 #view-button{
     display: flex;
     flex-direction: row;
@@ -503,7 +506,7 @@ color: rgb(1, 172, 253);
     border-radius: 12px;
     background: rgb(17, 17, 17);
     margin: 0 auto;
-    margin-top: 80px;
+    margin-top: 60px;
     
 }
 
@@ -523,7 +526,6 @@ footer{
     
     max-width: 1440px;
     width: 1024px;
-    /* height: 519px; */
     margin: 0 auto;
     
    
@@ -613,7 +615,7 @@ body{
     display: none;
 }
 #media{
-    display:contents ;
+    display:block ;
 }
 .nav-links{
     display: none;
